--- a/OakDriver/OakDriver/OakDriver.vcxproj.filters
+++ b/OakDriver/OakDriver/OakDriver.vcxproj.filters
@@ -22,9 +22,21 @@
     <ClCompile Include="OakDriver.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="DriverIOCTLHandler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ProcessNotificationHandler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OakDriverCommon.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DriverIOCTLHandler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ProcessNotificationHandler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
